<resources>
    <string name="app_name">1sicht</string>
    <string name="title_activity_log_in" translatable="false">LogInActivity</string>
    <string name="sign_up">Sign up</string>
    <string name="last_name">Last name:</string>
    <string name="name">Name:</string>
    <string name="settings">Settings</string>
    <string name="student_number">Student number:</string>
    <string name="student">Student</string>
    <string name="employee">Employee</string>
    <string name="confirm">Confirm</string>
    <string name="home_header">Home</string>
    <string name="register_header">Register</string>
    <string name="sign_out">Sign out</string>
    <string name="change_language">Change language</string>
    <string name="save">Save</string>
    <string name="matriculation_number">Matriculation number:</string>
    <string name="usersButton">Users</string>
    <string name="reviewsButton">Reviews</string>
    <string name="requestsButton">Employee Requests</string>
    <string name="language">Language:</string>
    <string name="listUsersHeader">Users</string>
    <string name="reviewCreationHeader">Create Review</string>
    <string name="reviewName">Name</string>
    <string name="reviewDate">Pick a date</string>
    <string name="reviewPlace">Place</string>
    <string name="timeslotLength">Length of Timeslot</string>
    <string name="timeslotNumber">Number of Timeslots</string>
    <string name="maxStudentsPerTimeslot">Max Students per Timeslot</string>
    <string name="moreInfo">Additional Information</string>
    <string name="cancel">Cancel</string>
    <string name="begin">Begin</string>
    <string name="waitingMessage">Please wait for confirmation from the admin (It may take a few days)</string>
    <string name="reviewScreenAdmin_header">Review Name</string>
    <string name="spts">Subscribed students:</string>
    <string name="listReviewHeader">Reviews</string>
    <string name="signUp">Review Sign Up</string>
    <string name="timeslot">Timeslot</string>
    <string name="changeTimeslot">Change Timeslot</string>
    <string name="deregister">Deregister</string>
    <string name="toast_register_1">Please select an option!</string>
    <string name="toast_register_2">Successfully registered!</string>
    <string name="toast_register_3">Please enter your matriculation number!</string>
    <string name="edit">Edit</string>
    <string name="hm_toast">The review was successfully deleted!</string>
    <string name="std_toast">You have successfully signed out!</string>
</resources>
